[package]
name = "rocket-cache-response"
version = "0.6.2"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/rocket-cache-response"
homepage = "https://magiclen.org/rocket-cache-response"
keywords = ["rocket", "server", "web", "cache", "http"]
categories = ["web-programming"]
description = "This crate provides a response struct used for HTTP cache control."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
rocket = "0.5.0-rc.2"

[dev-dependencies]
chrono = "0.4.6"